--- a/noconet/package.json
+++ b/noconet/package.json
@@ -18,6 +18,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@babel/preset-react": "^7.26.3",
     "@electron-forge/cli": "^7.7.0",
     "@electron-forge/maker-deb": "^7.7.0",
     "@electron-forge/maker-rpm": "^7.7.0",
