--- a/noconet/package.json
+++ b/noconet/package.json
@@ -39,6 +39,7 @@
     "@mui/material": "^6.4.5",
     "babel-loader": "^9.2.1",
     "electron-squirrel-startup": "^1.0.1",
+    "fs": "^0.0.1-security",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   }
