--- a/noconet/package.json
+++ b/noconet/package.json
@@ -38,6 +38,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.5",
     "babel-loader": "^9.2.1",
+    "electron-forge": "^5.2.4",
     "electron-squirrel-startup": "^1.0.1",
     "fs": "^0.0.1-security",
     "react": "^18.3.1",
