--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@mui/material": "^6.4.5",
     "@supabase/supabase-js": "^2.49.1",
+    "dotenv": "^16.4.7",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0"
